gallery and services UI and package selection module

--- a/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/Login.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/Admin/Login.cshtml
@@ -6,6 +6,10 @@
 
 
 <style>
+    body{
+
+        background-image:url('../../Content/images/adbg.jpg');
+    }
     #box {
         border: 1px solid black;
         height: 100%;
