--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Index.cshtml
@@ -21,6 +21,10 @@
 
 
     <style>
+        body{
+
+            background-color: whitesmoke;
+        }
 
         .im:hover {
             filter: blur(3px);
@@ -110,7 +114,12 @@
    
 
 
-    <div class="container" style="height: 1150px; margin-top:670px; width:1400px; border:1px solid black; ">
+    <div class="container" style="        height: 1150px;
+        margin-top: 670px;
+        width: 1400px;
+        border: 1px solid black;
+        background-color: white
+    ">
 
         <p style="margin-left:580px;margin-top:30px;color:black;font-size:30px;font-family:Algerian"> Book Events </p>
 
