--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Login.cshtml
@@ -13,6 +13,11 @@
 
 
         <style>
+
+            body{
+                background-color: whitesmoke;
+                
+            }
             #box {
                
                 height:40%;
@@ -33,9 +38,8 @@
                 padding-left: 90px;
                 padding-right: 60px;
                 border-radius: 10px;
-                //background-color: whitesmoke;
-                margin-top:250px;
-                
+                background-color: white;
+                margin-top: 250px;
             }
 
             div h1 {
@@ -82,7 +86,7 @@
                     @Html.PasswordFor(x => x.Password, new { @class = "form-control", @placeholder = "Password" })
 
                 </div>
-                <span style="color:red">   @Html.ValidationMessageFor(x => x.Password) </span>
+                <span style="color:red">@Html.ValidationMessageFor(x => x.Password) </span>
             </div>
 
 
