--- a/Event_Mgnt_System/Event_Mgnt_System/Views/User/Profile.cshtml
+++ b/Event_Mgnt_System/Event_Mgnt_System/Views/User/Profile.cshtml
@@ -71,37 +71,42 @@
 
                         <div class="col-lg-4 col-md-4" style="height:400px; width:300px; margin-top:80px;margin-left:10px;">
 
-                            <div style="height:100%; width:100%; border:1px solid black;border-radius: 5px 5px 5px 5px;
+                          <div style="height:100%; width:100%; border:1px solid black;border-radius: 5px 5px 5px 5px;
                   margin-left:70px;font-weight:500px;font-size:15px;background-color:white">
 
-                                <div style="padding:0px;height:50px;width:267px;background-color:rgb(179, 217, 255);
+                          <div style="padding:0px;height:50px;width:267px;background-color:rgb(179, 217, 255);
                      border-radius: 5px 5px 5px 5px"></div>
 
 
-                                <p style="padding-left:50px;padding-top:30px">
-                                    Booking ID:@item.Book_ID<br><br>
+                          <p style="padding-left:50px;padding-top:30px">
+                              Booking ID:@item.Book_ID<br><br>
 
 
 
-                                    Event Booked: @item.Event_Type<br><br>
+                              Event Booked: @item.Event_Type<br><br>
 
-                                    Event Venue: @item.Venue<br><br>
+                              Event Venue: @item.Venue<br><br>
 
-                                    Event Dates: @item.Event_Date<br><br>
-                                    Event Time: @item.Event_time<br><br>
+                              Event Dates: @item.Event_Date<br><br>
+                              Event Time: @item.Event_time<br><br>
 
-                                    Approval Status: @item.Approval
+                              Approval Status: @item.Approval
 
-                                    @if (@item.Approval == "confir" && @item.Book_ID != null)
-                                    {
-                                        <br />
-                                        <br />
-                                        <a href="@Url.Action("PackageSelection","User", new {name="yes",id=item.Book_ID})">
-                                            <button type="button" class="btn btn-success">Select Package</button>
-                                        </a>
-                                    }
+                              @if (@item.Approval == "confir" && @item.Book_ID != null)
+                                      {
+                                         
+                                  <br />
+                                  <br />
 
-                                </p>
+
+
+                                  <a href="@Url.Action("PackageSelection","User")">
+                                    <button type="button" class="btn btn-success">Select Package</button>
+                                  
+                                  </a>
+                              }
+
+                          </p>
 
 
                             </div>
